# GlycanDensityPrediction

./: .gitignore  infer.sh  interactive.job  pyproject.toml  python.yaml  reserved_set.csv  run.job  run_inference.job
configurations/: test.cfg  trial_1.cfg  trial_2.cfg  trial_3.cfg  trial_4.cfg  trial_5.cfg  trial_6.cfg  trial_7.cfg  trial_8.cfg
glycan_prediction_model/: constants.py
glycan_prediction_model/convert/: convert_keras_model_to_onnx.py
glycan_prediction_model/inference/: infer.py  infer_difference.py
glycan_prediction_model/scripts/: convert_keras_to_onnx.py
glycan_prediction_model/training/: data.py  loss.py  train.py  unet.py  utils.py  visualise_samples.ipynb
glycan_prediction_model/validate/: validate.py
